Fixes header row too wide for small displays

--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -67,11 +67,11 @@
   }
 }
 
-.header-stretch {
+.row .header-stretch.row {
   flex: 1;
   display: flex;
   align-items: flex-start;
-  margin: 1.25rem;
+  margin: 1.25rem 0;
   order: 3;
   justify-content: space-between;
 
